fix: placeholder with more contrast wrt normal text

--- a/src/app.css
+++ b/src/app.css
@@ -36,7 +36,7 @@
 	}
 
 	.text-input {
-		@apply focus:ring-unitn/55 w-full rounded-lg bg-zinc-800 px-4 py-3 outline-none focus:ring-2;
+		@apply focus:ring-unitn/55 w-full rounded-lg bg-zinc-800 px-4 py-3 outline-none focus:ring-2 placeholder:text-zinc-600;
 	}
 
 	.circular-button {
